[Plat-5858] Update to latest OpenAPI schema (#60)
* 0.9.0