@@ -17,7 +17,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class CreatePartsAsyncExample {
@@ -39,7 +38,7 @@ public class CreatePartsAsyncExample {
     List<CompletableFuture<Part>> futureParts = Stream.of("file-1.jt", "file-2.jt", "file-3.jt")
         .map(CreatePartsAsyncExample::buildCreateFileReq)
         .map(req -> createAndUploadFile(files, req).thenCompose(partId -> pc.createPartFromFileAsync(partId, req)))
-        .collect(Collectors.toList());
+        .toList();
 
     CompletableFuture.allOf(futureParts.toArray(new CompletableFuture[0])).join();
     futureParts.stream()
@@ -73,6 +72,6 @@ public class CreatePartsAsyncExample {
 
 
   private static boolean isNullOrEmpty(String s) {
-    return s == null || s.trim().length() == 0;
+    return s == null || s.trim().isEmpty();
   }
 }
